[package]
name = "flatzinc"
version = "0.3.19"
publish = true
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "A FlatZinc parser"
readme = "README.md"
categories = ["parser-implementations"]
documentation = "https://docs.rs/flatzinc"
repository = "https://github.com/potassco/flatzinc"
license = "MIT"
edition = "2021"
exclude = ["/.github"]

[dependencies]
nom = "7.0.0"

[dev-dependencies]
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
stderrlog = "0.5"
