[package]
name = "flatzinc"
version = "0.3.20-dev"
publish = false
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "A FlatZinc parser"
readme = "README.md"
categories = ["parser-implementations"]
documentation = "https://docs.rs/flatzinc"
repository = "https://github.com/potassco/flatzinc"
license = "MIT"
edition = "2021"
exclude = ["/.github"]

[dependencies]
nom = "7.0.0"

[dev-dependencies]
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
stderrlog = "0.5"
