[package]
name = "flatzinc"
version = "0.3.20"
publish = true
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "A FlatZinc parser"
readme = "README.md"
categories = ["parser-implementations"]
documentation = "https://docs.rs/flatzinc"
repository = "https://github.com/potassco/flatzinc"
license = "MIT"
edition = "2021"
exclude = ["/.github"]

[dependencies]
winnow = "0.6"

[dev-dependencies]
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
